--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,22 @@
 .container {
     width: 100%;
 }
+
+header {
+    background-color: #0184FD;
+    color: white;
+}
+
+section.header-nav{
+    padding: 1rem;
+}
+
+section.cards{
+    margin: 1.5rem;
+}
+
+section.cards div.card {
+    background-color: #B5DDFB;
+    margin-bottom: 1rem;
+    height: 400px;
+}
