--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ header {
     background-color: var(--blue-color);
     position: fixed;
     width: 100%;
+    padding: 0 1.5rem;
     z-index: 2;
 }
 
@@ -434,6 +435,7 @@ Tablet
 
     div.testimonial {
         flex-direction: row;
+        align-items: center;
     }
 
     div.testimonial-description {
@@ -500,6 +502,10 @@ Desktop
         text-decoration: none;
         color: var(--white-color);
         margin-left: .8rem;
+    }
+
+    .menu-button {
+        display: none;
     }
 
     nav.navbar ul li a.button {
